--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -4,6 +4,11 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### Application ###
+application.yaml
+application-dev.yaml
+application-prod.yaml
+
 ### STS ###
 .apt_generated
 .classpath
